蘑菇街登录完成
解决了选项卡的相关问题，并且完成了网页底部的制作

--- a/mogujie/index.html
+++ b/mogujie/index.html
@@ -11,18 +11,18 @@
 		<div id="logo"></div>
 		<div class="content-clearfix">
 			<div id="lg_banner"></div>
-			<div class="login">
+			<div class="login"  >
 				<div id="login_top">
 					<div id="login_top_left">
 						<a  id="butong">普通登录</a>
 					</div>
-					<div id="login_top_right">
-						<a  id="shouji">手机无密码登录</a>
+					<div id="login_top_right" class="active">
+						<a  id="shouji" >手机无密码登录</a>
 					</div>
 				</div>
 				<div id="content_left">
 					<div class="loginName">
-							<input id="zhangHao" value="手机/邮箱/昵称" type="text"></input>
+							<input id="zhangHao" placeholder="手机/邮箱/昵称" type="text"></input>
 					</div>
 					<div class="loginPass">
 						<input id="miMa" type="text"></input>
@@ -49,10 +49,10 @@
 				</div>
 				<div id="content_right">
 					<div class="loginName">
-						<input id="zhangHao" value="手机" type="text"></input>
+						<input id="zhangHao" placeholder="手机" type="text"></input>
 					</div>
 					<div class="loginPass">
-						<input id="miMa" value="动态密码" type="text"></input>
+						<input id="miMa" placeholder="动态密码" type="text"></input>
 					</div>
 					<div id="huoQu">
 						<span>获取动态密码</span>
@@ -80,5 +80,45 @@
 			</div>
 		</div>
 	</div>
+	<div id="footer">
+			<div id="footer_top">
+				<div class="xinShou">
+					<div class="xiaoBiaoTi">新手帮助</div>
+					<p class="yangShi1">如何购买</p>
+					<p class="yangShi1">优惠券使用</p>
+					<p class="yangShi1">支付教程</p>
+					<p class="yangShi1">常见问题</p>
+				</div>
+				<div class="quanYi">
+					<div class="xiaoBiaoTi">权益保障</div>
+					<p class="yangShi2">全国包邮</p>
+					<p class="yangShi2">7天无理由退货</p>
+					<p class="yangShi2">退货运费补贴</p>
+					<p class="yangShi2">72小时发货</p>
+				</div>
+				<div class="sangJia">
+					<div class="xiaoBiaoTi">商家服务</div>
+					<p class="yangShi1">帮助中心</p>
+					<p class="yangShi1">商家平台</p>
+				</div>
+				<div class="qr_code">
+					<div id="yiDong">
+						<span id="wenZi">蘑菇街移动客户端</span>
+						<div id="pic"></div>
+					</div>
+				</div>
+			</div>
+			<div id="footer_bottm">
+				<div class="copy">©Copyright 2010-2014 蘑菇街 Mogujie.com (增值电信业务经营许可证：浙B2-20110349)</div>
+			</div>
+		</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
