--- a/miniQQ/index.html
+++ b/miniQQ/index.html
@@ -17,65 +17,111 @@
 		</div>
 		<div id="myInfo">
 			<div id="myHead"></div>
-			<span id="myName">马来西亚皇子</span>
+			<span id="myName">  马来西亚皇子</span>
+			<div class="gongNeng">
+				<div class="gong" onclick="window.open('http://qzone.qq.com')"></div>
+				<div class="gong" onclick="window.open('http://mail.qq.com')"></div>
+				<div class="gong" onclick="window.open('http://t.qq.com')"></div>
+				<div class="gong" onclick="window.open('http://v.qq.com')"></div>
+				<div class="gong" onclick="window.open('http://www.qq.com')"></div>
+				<div class="gong" onclick="window.open('http://http://wallet.tenpay.com/web/')"></div>
+				<div class="gong" onclick="window.open('http://www.pengyou.com')"></div>
+				<div class="gong" onclick="window.open('http://www.weiyun.com')"></div>
+
+			</div>
 		</div>
-		<div id="huiHua">
-			<span id="huiHuaA">会话</span>
-
-		<div id="friendList">
+		<div id="jiemian">
+			<div id="yongHu">
+				<div id="huiHua">
+					<span id="huiHuaA">会话</span>
+				</div>
+				<div id="friendList">
 			
-			<div class="friendA" id="friend1001" friendName="格策" friendID="1001">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">格策</span>
-					<span class="friendShuoShuo">爱格策真是太好啦！</span>
-				</div>
-			 </div>
+				<div class="friendA" id="friend1001" friendName="格策" friendID="1001">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">格策</span>
+						<span class="friendShuoShuo">爱格策真是太好啦！</span>
+					</div>
+				 </div>
 
-			<div class="friendA" id="friend1002" friendName="C罗" friendID="1002">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">C罗</span>
-					<span class="friendShuoShuo">那个进球好叼</span>
+				<div class="friendA" id="friend1002" friendName="C罗" friendID="1002">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">C罗</span>
+						<span class="friendShuoShuo">那个进球好叼</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1003" friendName="梅西" friendID="1003">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">梅西</span>
+						<span class="friendShuoShuo">我是煤球王</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1004" friendName="本泽马" friendID="1004">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">本泽马</span>
+						<span class="friendShuoShuo">救主神器就是我</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1005" friendName="罗伊斯" friendID="1005">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">罗伊斯</span>
+						<span class="friendShuoShuo">下次要去世界杯</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1006" friendName="德罗巴" friendID="1006">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">德罗巴</span>
+						<span class="friendShuoShuo">我是怪兽</span>
+					</div>
+				</div>
 				</div>
 			</div>
-
-			<div class="friendA" id="friend1003" friendName="梅西" friendID="1003">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">梅西</span>
-					<span class="friendShuoShuo">我是煤球王</span>
+			<div id="lianxirenlibiao">
+				<div id="huiHua">
+					<span id="huiHuaA">联系人</span>
+				</div>
+				<div id="friendList"></div>
+			</div>
+			<div id="faixanlibiao">
+				<div id="huiHua">
+					<span id="huiHuaA">发现</span>
+				</div>
+				<div id="friendList"></div>
+			</div>
+			<div id="shezhilibiao">
+				<div id="huiHua">
+					<span id="huiHuaA">设置</span>
+				</div>
+				<div id="friendList"></div>
+			</div>
+			<div id="contrl">
+				<div id="contrlhuiHua" >
+					<div id="a" class="wenZi">会话</div>
+				</div>
+				<div id="contrllianXiren">
+					<div id="b" class="wenZi">联系人</div>
+				</div>
+				<div id="contrlfaXian">
+					<div id="c" class="wenZi">发现</div>
+				</div>
+				<div id="contrlsheZhi">
+					<div id="d" class="wenZi">设置</div>
 				</div>
 			</div>
-
-			<div class="friendA" id="friend1004" friendName="本泽马" friendID="1004">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">本泽马</span>
-					<span class="friendShuoShuo">救主神器就是我</span>
-				</div>
-			</div>
-
-			<div class="friendA" id="friend1005" friendName="罗伊斯" friendID="1005">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">罗伊斯</span>
-					<span class="friendShuoShuo">下次要去世界杯</span>
-				</div>
-			</div>
-
-			<div class="friendA" id="friend1006" friendName="德罗巴" friendID="1006">
-				<div class="friendHeadImage"></div>
-				<div class="friendInfo">
-					<span class="friendNickName">德罗巴</span>
-					<span class="friendShuoShuo">我是怪兽</span>
-				</div>
-			</div>
-
-
-	</div>
+		</div>
 		
 	</div>
+
 </div>
 
 </body>
