前一周所完成的一个静态页面

--- a/miniQQ/index.html
+++ b/miniQQ/index.html
@@ -96,7 +96,17 @@
 				<div id="huiHua">
 					<span id="huiHuaA">发现</span>
 				</div>
-				<div id="friendList"></div>
+				<div id="faXianlist">
+					<div id="kongJian" onclick="window.open('http://qz.qq.com/')">
+						<div class="img1"></div>
+					</div>
+					<div id="youJian" onclick="window.open('mail.qq.com')">
+						<div class="img2"></div>
+					</div>
+					<div id="qqShouye" onclick="window.open('www.qq.com')">
+						<div class="img3"></div>
+					</div>
+				</div>
 			</div>
 			<div id="shezhilibiao">
 				<div id="huiHua">
