--- a/miniQQ/index.html
+++ b/miniQQ/index.html
@@ -13,7 +13,7 @@
 
 		<div id="qqTitle">
 			<span id="qqVersion">QQ2014</span>
-			<div id="closeimage"></div>
+			<div id="closeimage" class="cc"></div>
 		</div>
 		<div id="myInfo">
 			<div id="myHead"></div>
@@ -89,6 +89,56 @@
 			<div id="lianxirenlibiao">
 				<div id="huiHua">
 					<span id="huiHuaA">联系人</span>
+					<div id="friendList">
+			
+				<div class="friendA" id="friend1001" friendName="格策" friendID="1001">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">格策</span>
+						<span class="friendShuoShuo">爱格策真是太好啦！</span>
+					</div>
+				 </div>
+
+				<div class="friendA" id="friend1002" friendName="C罗" friendID="1002">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">C罗</span>
+						<span class="friendShuoShuo">那个进球好叼</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1003" friendName="梅西" friendID="1003">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">梅西</span>
+						<span class="friendShuoShuo">我是煤球王</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1004" friendName="本泽马" friendID="1004">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">本泽马</span>
+						<span class="friendShuoShuo">救主神器就是我</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1005" friendName="罗伊斯" friendID="1005">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">罗伊斯</span>
+						<span class="friendShuoShuo">下次要去世界杯</span>
+					</div>
+				</div>
+
+				<div class="friendA" id="friend1006" friendName="德罗巴" friendID="1006">
+					<div class="friendHeadImage"></div>
+					<div class="friendInfo">
+						<span class="friendNickName">德罗巴</span>
+						<span class="friendShuoShuo">我是怪兽</span>
+					</div>
+				</div>
+				</div>
 				</div>
 				<div id="friendList"></div>
 			</div>
@@ -112,7 +162,22 @@
 				<div id="huiHua">
 					<span id="huiHuaA">设置</span>
 				</div>
-				<div id="friendList"></div>
+				<div id="friendList">
+					<div id="geXing">
+						<span id="gxqm">个性签名: </span>
+						<span id="qm">点球了，真赤激</span>
+					</div>
+					<div id="banBen">
+						<span id="ban">当前版本 </span>
+						<span id="ben">V1.0</span>
+					</div>
+					<div id="bangZhu">
+						<span id="bz"  onclick="window.open('http://support.qq.com/discuss/513_1.shtml')">帮助与反馈</span>
+					</div>
+					<div id="tuiChu">
+						<span id="tc" class="cc">退出当前帐号</span>
+					</div>
+				</div>
 			</div>
 			<div id="contrl">
 				<div id="contrlhuiHua" >
@@ -132,6 +197,14 @@
 		
 	</div>
 
+	<div id="ctrlBack">
+		<span id="ctrlSpan1" pic="1" class="ctrlB activeB">1</span>
+		<span id="ctrlSpan2" pic="2" class="ctrlB ">2</span>
+		<span id="ctrlSpan3" pic="3" class="ctrlB ">3</span>
+		<span id="ctrlSpan4" pic="4" class="ctrlB ">4</span>
+		<span id="ctrlSpan5" pic="5" class="ctrlB ">5</span>
+		<span id="tiShi">点击切换背景图片</span>
+	</div>
 </div>
 
 </body>
