--- a/miniQQ/index.html
+++ b/miniQQ/index.html
@@ -17,7 +17,7 @@
 		</div>
 		<div id="myInfo">
 			<div id="myHead"></div>
-			<span id="myName">  马来西亚皇子</span>
+			<span id="myName">权</span>
 			<div class="gongNeng">
 				<div class="gong" onclick="window.open('http://qzone.qq.com')"></div>
 				<div class="gong" onclick="window.open('http://mail.qq.com')"></div>
@@ -89,58 +89,47 @@
 			<div id="lianxirenlibiao">
 				<div id="huiHua">
 					<span id="huiHuaA">联系人</span>
-					<div id="friendList">
-			
-				<div class="friendA" id="friend1001" friendName="格策" friendID="1001">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">格策</span>
-						<span class="friendShuoShuo">爱格策真是太好啦！</span>
 					</div>
-				 </div>
-
-				<div class="friendA" id="friend1002" friendName="C罗" friendID="1002">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">C罗</span>
-						<span class="friendShuoShuo">那个进球好叼</span>
+				<div id="friendList">
+					<div id="memberTab">
+						<li id="memberT" class="tabYangshi activeTab">好友</li>
+						<li id="qunTab" class="tabYangshi">群</li>
+						<li id="taolunZhu" class="tabYangshi">讨论组</li>
 					</div>
-				</div>
-
-				<div class="friendA" id="friend1003" friendName="梅西" friendID="1003">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">梅西</span>
-						<span class="friendShuoShuo">我是煤球王</span>
+					<div id="member">
+						<li id="myfriend1" class="friendYangshi">
+							<p class="smallImg"></p>
+							<span class="groupName">我的好友</span>
+							<span class="groupN">9/18</span>
+						</li>
+						<li id="myfriend2" class="friendYangshi">
+							<p class="smallImg"></p>
+							<span class="groupName">初中同学</span>
+							<span class="groupN">9/9</span>
+						</li>
+						<li id="myfriend3" class="friendYangshi">
+							<p class="smallImg"></p>	
+							<span class="groupName">高中同学</span>
+							<span class="groupN">9/18</span>
+						</li>
 					</div>
-				</div>
-
-				<div class="friendA" id="friend1004" friendName="本泽马" friendID="1004">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">本泽马</span>
-						<span class="friendShuoShuo">救主神器就是我</span>
+					<div id="qun">
+						<li class="qunYangshi friendA"  id="friend1007" friendName="淮安" friendID="1007">
+							<p class="qunImg" ></p>
+							<span class="groupName">淮安</span>
+						</li>
+						<li class="qunYangshi friendA"  id="friend1008" friendName="南京" friendID="1008">
+							<p class="qunImg"></p>
+							<span class="groupName">南京</span>
+						</li>
 					</div>
-				</div>
-
-				<div class="friendA" id="friend1005" friendName="罗伊斯" friendID="1005">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">罗伊斯</span>
-						<span class="friendShuoShuo">下次要去世界杯</span>
-					</div>
-				</div>
-
-				<div class="friendA" id="friend1006" friendName="德罗巴" friendID="1006">
-					<div class="friendHeadImage"></div>
-					<div class="friendInfo">
-						<span class="friendNickName">德罗巴</span>
-						<span class="friendShuoShuo">我是怪兽</span>
+					<div id="taolun">
+						<li class="qunYangshi friendA"  id="friend1008" friendName="逗逗逗" friendID="1008">
+							<p class="taoImg"></p>
+							<span class="groupName">逗逗逗</span>
+						</li>
 					</div>
 				</div>
-				</div>
-				</div>
-				<div id="friendList"></div>
 			</div>
 			<div id="faixanlibiao">
 				<div id="huiHua">
