--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -23,9 +23,59 @@
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">游戏</a>
 			</div>
-			<div id="topSou">
-				<input type="text" value="大家都在热搜：自制水果" moren=""></input>
-
+			<div id="topSou">  
+				<div id="search">
+					<input type="text" placeholder="大家都在热搜：自制水果"></input>
+				</div>
+				<div class="topSouCon">
+					<ul>
+						<li class="topConSlect"><a href="#" id="jieguo">查看完整搜索结果>></a></li>
+						<li class="topConSlect"><a href="#" >大锅只是喝醉</a></li>
+						<li class="topConSlect"><a href="#" >韩雪</a></li>
+						<li class="topConSlect"><a href="#" >呵呵呵</a></li>
+						<li class="topConSlect"><a href="#" >哈哈哈</a></li>
+						<li class="topConSlect"><a href="#" >嘿嘿嘿</a></li>
+						<li class="topConSlect"><a href="#" >嘿嘿嘿</a></li>
+						<li class="topConSlect"><a href="#" >嘿嘿嘿</a></li>
+						<li class="topConSlect"><a href="#" >嘿嘿嘿</a></li>
+						<li class="topConSlect"><a href="#" >嘿嘿嘿</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="topPerson">
+				<a href="#" class="personName">Fly</a>
+				<div class="topSet" id="faweibo"></div>
+				<div class="topSet" id="xinxi">
+					<ul>
+						<li><a href="#">查看评论</a></li>
+						<li><a href="#">查看共同评论</a></li>
+						<li><a href="#">查看新@我</a></li>
+						<li><a href="#">查看私信</a></li>
+						<li><a href="#">查看新粉丝</a></li>
+						<li><a href="#">查看密友微博</a></li>
+						<li><a href="#">查看发给我的</a></li>
+						<li><a href="#">查看应用消息</a></li>
+						<li><a href="#">提醒设置</a></li>
+					</ul>
+				</div>
+				<div class="topSet" id="shezhi">
+					<ul>
+						<li><a href="#">账户设置</a></li>
+						<li><a href="#">模板设置</a></li>
+						<li><a href="#">勋章</a></li>
+						<li><a href="#">V认证</a></li>
+						<li><a href="#">达人</a></li>
+						<li><a href="#">我的微币</a></li>
+						<li><a href="#">我的帐号</a></li>
+					</ul>
+				</div>
+				<div class="topSet" id="huangguan">
+					<ul>
+						<li><a href="#">开通会员</a></li>
+						<li><a href="#">年费会员</a></li>
+						<li><a href="#">会员官网</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
