热门活动的下拉菜单

--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -15,7 +15,20 @@
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">热门</a>
-				<div></div>
+				<div class="topMenuAll">
+					<ul>
+						<div id="topMenuAllXin">官方推荐</div>
+						<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/2.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/3.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/4.png"><a href="#">热门微博</a></li>
+						<div id="topMenuAllXin">猜你喜欢</div>
+						<li><img src="css/image/5.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/6.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/7.png"><a href="#">热门微博</a></li>
+						<li><img src="css/image/8.png"><a href="#">热门微博</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">应用</a>
@@ -24,9 +37,7 @@
 				<a href="#" class="topMenuLeftTitle">游戏</a>
 			</div>
 			<div id="topSou">  
-				<div id="search">
-					<input type="text" placeholder="大家都在热搜：自制水果"></input>
-				</div>
+				<input type="text" placeholder="大家都在热搜：自制水果" ></input>
 				<div class="topSouCon">
 					<ul>
 						<li class="topConSlect"><a href="#" id="jieguo">查看完整搜索结果>></a></li>
@@ -44,37 +55,46 @@
 			</div>
 			<div class="topPerson">
 				<a href="#" class="personName">Fly</a>
-				<div class="topSet" id="faweibo"></div>
-				<div class="topSet" id="xinxi">
-					<ul>
-						<li><a href="#">查看评论</a></li>
-						<li><a href="#">查看共同评论</a></li>
-						<li><a href="#">查看新@我</a></li>
-						<li><a href="#">查看私信</a></li>
-						<li><a href="#">查看新粉丝</a></li>
-						<li><a href="#">查看密友微博</a></li>
-						<li><a href="#">查看发给我的</a></li>
-						<li><a href="#">查看应用消息</a></li>
-						<li><a href="#">提醒设置</a></li>
-					</ul>
+				<div class="topSet"><div id="faweibo"></div></div>
+				<div class="topSet ">
+					<div id="xinxi"></div>
+					<div class="topCon">
+						<ul>
+							<li><a href="#">查看评论</a></li>
+							<li><a href="#">查看共同评论</a></li>
+							<li><a href="#">查看新@我</a></li>
+							<li><a href="#">查看私信</a></li>
+							<li><a href="#">查看新粉丝</a></li>
+							<li><a href="#">查看密友微博</a></li>
+							<li><a href="#">查看发给我的</a></li>
+							<li><a href="#">查看应用消息</a></li>
+							<li><a href="#">提醒设置</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="topSet" id="shezhi">
-					<ul>
-						<li><a href="#">账户设置</a></li>
-						<li><a href="#">模板设置</a></li>
-						<li><a href="#">勋章</a></li>
-						<li><a href="#">V认证</a></li>
-						<li><a href="#">达人</a></li>
-						<li><a href="#">我的微币</a></li>
-						<li><a href="#">我的帐号</a></li>
-					</ul>
+				<div class="topSet">
+					<div id="shezhi"></div>
+					<div class="topCon">
+						<ul>
+							<li><a href="#">账户设置</a></li>
+							<li><a href="#">模板设置</a></li>
+							<li><a href="#">勋章</a></li>
+							<li><a href="#">V认证</a></li>
+							<li><a href="#">达人</a></li>
+							<li><a href="#">我的微币</a></li>
+							<li><a href="#">我的帐号</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="topSet" id="huangguan">
-					<ul>
-						<li><a href="#">开通会员</a></li>
-						<li><a href="#">年费会员</a></li>
-						<li><a href="#">会员官网</a></li>
-					</ul>
+				<div class="topSet">
+					<div id="huangguan"></div>
+					<div class="topCon">
+						<ul>
+							<li><a href="#">开通会员</a></li>
+							<li><a href="#">年费会员</a></li>
+							<li><a href="#">会员官网</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
