开始主菜单

--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -16,25 +16,71 @@
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">热门</a>
 				<div class="topMenuAll">
-					<ul>
-						<div id="topMenuAllXin">官方推荐</div>
-						<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/2.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/3.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/4.png"><a href="#">热门微博</a></li>
-						<div id="topMenuAllXin">猜你喜欢</div>
-						<li><img src="css/image/5.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/6.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/7.png"><a href="#">热门微博</a></li>
-						<li><img src="css/image/8.png"><a href="#">热门微博</a></li>
-					</ul>
+					<div id="topMenuAllXinA">官方推荐</div>
+					<div class="topMenuA">
+						<ul>
+							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/2.png"><a href="#">热门榜单</a></li>
+							<li><img src="css/image/3.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
+						</ul>
+					</div>
+					<div id="topMenuAllXinB">猜你喜欢</div>
+					<div class="topMenuB">
+						<ul>
+							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
+							<li><img src="css/image/6.png"><a href="#">社会微博</a></li>
+							<li><img src="css/image/7.png"><a href="#">天气情况</a></li>
+							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">应用</a>
+				<div class="topMenuAll">
+					<div id="topMenuAllXinA">官方推荐</div>
+					<div class="topMenuA">
+						<ul>
+							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/2.png"><a href="#">热门榜单</a></li>
+							<li><img src="css/image/3.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
+						</ul>
+					</div>
+					<div id="topMenuAllXinB">猜你喜欢</div>
+					<div class="topMenuB">
+						<ul>
+							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
+							<li><img src="css/image/6.png"><a href="#">社会微博</a></li>
+							<li><img src="css/image/7.png"><a href="#">天气情况</a></li>
+							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">游戏</a>
+				<div class="topMenuAll">
+					<div id="topMenuAllXinA">官方推荐</div>
+					<div class="topMenuA">
+						<ul>
+							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/2.png"><a href="#">热门榜单</a></li>
+							<li><img src="css/image/3.png"><a href="#">热门微博</a></li>
+							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
+						</ul>
+					</div>
+					<div id="topMenuAllXinB">猜你喜欢</div>
+					<div class="topMenuB">
+						<ul>
+							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
+							<li><img src="css/image/6.png"><a href="#">社会微博</a></li>
+							<li><img src="css/image/7.png"><a href="#">天气情况</a></li>
+							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 			<div id="topSou">  
 				<input type="text" placeholder="大家都在热搜：自制水果" ></input>
@@ -98,6 +144,102 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div id="main">
+		<div id="mainLeft">
+			<div class="mainLeft1">
+				<ul class="mainLeft1A">
+					<li><a href="#" class="mainLeft1li1"><i></i>玩转微博</a></li>
+					<li><a href="#" class="mainLeft1li2"><i></i>首页</a></li>
+					<li><a href="#" class="mainLeft1li3"><i></i>消息</a></li>
+					<li><a href="#" class="mainLeft1li4"><i></i>收藏</a></li>
+					<li><a href="#" class="mainLeft1li5"><i></i>发给我的</a></li>
+				</ul>
+				<div class="mainLeft1B">
+					<a href="#" class="mainLeft1li6"><i></i>好友圈</a>
+				</div>
+			</div>
+
+			<div class="mainLeft2">					
+				<form >
+					<fieldset class="mainLeft2fld">
+					<legend>分组</legend>
+				</fieldset>
+				</form>
+					<ul class="mainLeft2Ul">
+						<li>
+							<a href="#">
+								<em class="em1"></em>
+								<em class="em2"></em>
+								<span>同事</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<em class="em1"></em>
+								<em class="em2"></em>
+								<span>同学</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<em class="em1"></em>
+								<em class="em2"></em>
+								<span>朋友</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<em class="em1"></em>
+								<em class="em2"></em>
+								<span>家人</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<em class="em1"></em>
+								<em class="em2"></em>
+								<span>明星</span>
+							</a>
+						</li>
+					</ul>
+					<div value="1" class="open opens"><a>展开</a></div>
+			</div>
+
+			<div class="mainLeft3">
+				<form >
+					<fieldset class="mainLeft2fld">
+						<legend>官方应用</legend>
+					</fieldset>
+				</form>
+				<ul class="mainLeft3Ul">
+					<li><a href="#"><img src="css/image/01.jpg">应用广场</a></li>
+					<li><a href="#"><img src="css/image/02.jpg">游戏广场</a></li>
+					<li><a href="#"><img src="css/image/03.jpg">热门微博</a></li>
+					<li><a href="#"><img src="css/image/04.jpg">热门话题</a></li>
+					<li><a href="#"><img src="css/image/05.jpg">名人堂</a></li>
+					<li><a href="#"><img src="css/image/06.jpg">微博会员</a></li>
+					<li class="hide"><a href="#"><img src="css/image/07.jpg">微博搜索</a></li>
+					<li class="hide"><a href="#"><img src="css/image/08.jpg">微博地位</a></li>
+					<li class="hide"><a href="#"><img src="css/image/09.jpg">微音乐</a></li>
+				<div value="2" class="open openss"><a>展开</a></div>
+			</div>
+
+			<div class="mainLeft4">
+				<form >
+					<fieldset class="mainLeft2fld">
+						<legend>最近使用</legend>
+					</fieldset>
+				</form>
+					<ul class="mainLeft3Ul">
+						<li><a href="#"><img src="css/image/09.jpg">微问</a></li>
+					</ul>
+			</div>
+
+		</div>
+		<div id="mainMid"></div>
+		<div id="mainRight"></div>
 	</div>
 
 </body>
