--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -203,6 +203,20 @@
 								<span>明星</span>
 							</a>
 						</li>
+						<li class="hide">
+								<a href="#">
+									<em class="em1"></em>
+									<em class="em2"></em>
+									<span>好吃</span>
+								</a>
+							</li>
+							<li class="hide">
+								<a href="#">
+									<em class="em1"></em>
+									<em class="em2"></em>
+									<span>好用</span>
+								</a>
+							</li>
 					</ul>
 					<div value="1" class="open opens"><a>展开</a></div>
 			</div>
@@ -217,11 +231,11 @@
 					<li><a href="#"><img src="css/image/01.jpg">应用广场</a></li>
 					<li><a href="#"><img src="css/image/02.jpg">游戏广场</a></li>
 					<li><a href="#"><img src="css/image/03.jpg">热门微博</a></li>
-					<li><a href="#"><img src="css/image/04.jpg">热门话题</a></li>
-					<li><a href="#"><img src="css/image/05.jpg">名人堂</a></li>
-					<li><a href="#"><img src="css/image/06.jpg">微博会员</a></li>
-					<li class="hide"><a href="#"><img src="css/image/07.jpg">微博搜索</a></li>
-					<li class="hide"><a href="#"><img src="css/image/08.jpg">微博地位</a></li>
+					<li><a href="#"><img src="css/image/01.jpg">热门话题</a></li>
+					<li><a href="#"><img src="css/image/02.jpg">名人堂</a></li>
+					<li><a href="#"><img src="css/image/08.jpg">微博会员</a></li>
+					<li class="hide"><a href="#"><img src="css/image/09.jpg">微博搜索</a></li>
+					<li class="hide"><a href="#"><img src="css/image/09.jpg">微博地位</a></li>
 					<li class="hide"><a href="#"><img src="css/image/09.jpg">微音乐</a></li>
 				<div value="2" class="open openss"><a>展开</a></div>
 			</div>
