--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -16,7 +16,11 @@
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">热门</a>
 				<div class="topMenuAll">
-					<div id="topMenuAllXinA">官方推荐</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>官方推荐</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuA">
 						<ul>
 							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
@@ -25,7 +29,11 @@
 							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
 						</ul>
 					</div>
-					<div id="topMenuAllXinB">猜你喜欢</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>猜你喜欢</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuB">
 						<ul>
 							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
@@ -34,12 +42,17 @@
 							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
 						</ul>
 					</div>
+					<div class="guangGao"></div>
 				</div>
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">应用</a>
 				<div class="topMenuAll">
-					<div id="topMenuAllXinA">官方推荐</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>官方推荐</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuA">
 						<ul>
 							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
@@ -48,7 +61,11 @@
 							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
 						</ul>
 					</div>
-					<div id="topMenuAllXinB">猜你喜欢</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>猜你喜欢</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuB">
 						<ul>
 							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
@@ -57,12 +74,17 @@
 							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
 						</ul>
 					</div>
+					<div class="guangGao"></div>
 				</div>
 			</div>
 			<div class="topMenuLeft">
 				<a href="#" class="topMenuLeftTitle">游戏</a>
 				<div class="topMenuAll">
-					<div id="topMenuAllXinA">官方推荐</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>官方推荐</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuA">
 						<ul>
 							<li><img src="css/image/1.png"><a href="#">热门微博</a></li>
@@ -71,7 +93,11 @@
 							<li><img src="css/image/4.png"><a href="#">情感专家</a></li>
 						</ul>
 					</div>
-					<div id="topMenuAllXinB">猜你喜欢</div>
+					<form>
+						<fieldset class="topMenuAlldest">
+							<legend>猜你喜欢</legend>
+						</fieldset>
+					</form>
 					<div class="topMenuB">
 						<ul>
 							<li><img src="css/image/5.png"><a href="#">星座传奇</a></li>
@@ -80,10 +106,11 @@
 							<li><img src="css/image/8.png"><a href="#">医疗保健</a></li>
 						</ul>
 					</div>
+					<div class="guangGao"></div>
 				</div>
 			</div>
 			<div id="topSou">  
-				<input type="text" placeholder="大家都在热搜：自制水果" ></input>
+				<input type="text" placeholder="大家都在热搜：自制水果" name="search"></input>
 				<div class="topSouCon">
 					<ul>
 						<li class="topConSlect"><a href="#" id="jieguo">查看完整搜索结果>></a></li>
@@ -164,8 +191,8 @@
 			<div class="mainLeft2">					
 				<form >
 					<fieldset class="mainLeft2fld">
-					<legend>分组</legend>
-				</fieldset>
+						<legend>分组</legend>
+					</fieldset>
 				</form>
 					<ul class="mainLeft2Ul">
 						<li>
@@ -237,6 +264,7 @@
 					<li class="hide"><a href="#"><img src="css/image/09.jpg">微博搜索</a></li>
 					<li class="hide"><a href="#"><img src="css/image/09.jpg">微博地位</a></li>
 					<li class="hide"><a href="#"><img src="css/image/09.jpg">微音乐</a></li>
+				</ul>
 				<div value="2" class="open openss"><a>展开</a></div>
 			</div>
 
@@ -252,7 +280,9 @@
 			</div>
 
 		</div>
-		<div id="mainMid"></div>
+		<div id="mainMid">
+			
+		</div>
 		<div id="mainRight"></div>
 	</div>
 
