完成发布消息等部分
2014.9.2

--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -281,10 +281,56 @@
 
 		</div>
 		<div id="mainMid">
-			
+			<div id="mainMidTop">
+				<div id="mainMidTopLeft"></div>
+				<div class="mainMidTopRight">
+					<a href="#">哈尔滨3犯人杀管教越狱，悬赏30万通缉(图)</a>
+					<a href="#">热门微博</a>
+				</div>
+			</div>
+			<div class="mainCenterText">
+				<textarea>中秋即将到来，说说你心目中的最佳赏月地！</textarea>
+				<div class="mainCenterTextRight"></div>
+			</div>
+			<div class="mainCenterBottom">
+				<div class="mainCenterBLeft">
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI1"><i></i>表情</a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI2"><i></i>图片</a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI3"><i></i>视频</a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI4"><i></i>话题</a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI5"><i></i>长微博</a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI6">更多>></a>
+				</div>
+				<div class="mainCenterBRight">
+					<a href="#" class="mainCenterBRightR"><span>发布</span></a>
+					<a href="#" class="mainCenterBLeftA mainCenterBLeftI6 mainCenterBLeftI7">公开</a>
+				</div>
+			</div>
+			<div class="mainCenterGuangGao"><img src="css/image/guanggao.png"></div>
+			<div class="mainCenter3">
+				<div class="mainCenter3Top">
+					<ul class="mainCenter3TopUl">
+						<li><a href="#" class="a">微博</a></li>
+					</ul>
+					<div class="mainCenter3TopD"></div>
+					<div class="mainCenter3TopRight">
+						<div class="mainCenter3TopRight1">
+							<input type="text" value="查找关注我的人的微博">
+								<div class="mainCenter3TopRight1R">
+									<a href="#"></a>
+								</div>
+						</div>
+						<div class="mainCenter3TopRight2">
+							<a href="#"><i></i>时间排序</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
 		<div id="mainRight"></div>
 	</div>
+	<div id="footer"></div>
 
 </body>
 </html>
