--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -326,9 +326,119 @@
 					</div>
 				</div>
 			</div>
+			<div class="mainCenter4">
+				<div class="mainCenter4Main1">
+					<div class="mainCenter4MainPic"><img src="css/image/headimage.jpg"></div>
+					<div class="mainCenter4MainContent">
+						<div class="mainCenter4MainContent1">
+							<a href="#">趣闻搞笑</a>
+							<i class="i1"></i>
+							<i class="i2"></i>
+						</div>
+						<div class="mainCenter4MainContent2">叫你们再超近道啊<img src="css/image/gou.gif">（转）</div>
+						<div class="mainCenter4MainContent3">
+							<img class="smallPic" src="css/image/small.jpg">
+							<div class="bigPic">
+								<img src="css/image/big.jpg">
+							</div>
+						</div>
+						<div class="mainCenter4MainContent4">
+							<div class="mainCenter4MainContent4Left">
+								<a href="#">30分钟前</a>
+								<span>来自</span>
+								<a href="#">微博 weibo.com</a>
+								<span class="hide">|</span>
+								<a href="#" class="hide">举报</a>
+							</div>
+							<div class="mainCenter4MainContent4Right">
+								<a href="#" id="mainCenter4MainContent4RightSA"><em></em>(50)</a>
+								<span>|</span>
+								<a href="#">转发(100)</a>
+								<span>|</span>
+								<a href="#">收藏</a>
+								<span>|</span>
+								<a href="#">评论(12)</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="mainCenter4Main2">
+					<div class="mainCenter4MainPic"><img src="css/image/headimage.jpg"></div>
+					<div class="mainCenter4MainContent">
+						<div class="mainCenter4MainContent1">
+							<a href="#">趣闻搞笑</a>
+							<i class="i1"></i>
+							<i class="i2"></i>
+						</div>
+						<div class="mainCenter4MainContent2">叫你们再超近道啊<img src="css/image/gou.gif">（转）</div>
+						<div class="mainCenter4MainContent3">
+							<img class="smallPic" src="css/image/small.jpg">
+							<div class="bigPic">
+								<img src="css/image/big.jpg">
+							</div>
+						</div>
+						<div class="mainCenter4MainContent4">
+							<div class="mainCenter4MainContent4Left">
+								<a href="#">30分钟前</a>
+								<span>来自</span>
+								<a href="#">微博 weibo.com</a>
+								<span class="hide">|</span>
+								<a href="#" class="hide">举报</a>
+							</div>
+							<div class="mainCenter4MainContent4Right">
+								<a href="#" id="mainCenter4MainContent4RightSA"><em></em>(50)</a>
+								<span>|</span>
+								<a href="#">转发(100)</a>
+								<span>|</span>
+								<a href="#">收藏</a>
+								<span>|</span>
+								<a href="#">评论(12)</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
-		<div id="mainRight"></div>
+		<div id="mainRight">
+			<div class="mainRight1">
+				<div class="mainRight1Main">
+					<a href="#" class="mainRight1MainL"><img src="css/image/myhead.jpg"></a>
+					<div class="mainRight1MainR">
+						<a href="#" class="mainRight1MainR1">破事水</a>
+						<a href="#" class="mainRight1MainR2"><span></span></a>
+					</div>
+				</div>
+				<ul class="mainRight2Main">
+					<li><a href="#" class="mainRight2MainLia"><strong>10</strong><span>关注</span></a></li>
+					<li><a href="#" class="mainRight2MainLia"><strong>10</strong><span>粉丝</span></a></li>
+					<li id="mainRight2MainLiS"><a href="#" class="mainRight2MainLia"><strong>10</strong><span>微博</span></a></li>
+				</ul>
+			</div>
+			<div class="mainRight2">
+						<a href="#" class="change">换一换</a>
+						<form >
+							<fieldset class="mainLeft2fld mainLeft2fld2">
+								<legend>可能感兴趣的人</legend>
+							</fieldset>
+						</form>
+						<div class="mainRight2D1">
+							<div class="mainRight2D1T">
+								<a href="#" class="mainRight2D1TPic"><img src="css/image/hongbao.jpg"></a>
+								<div class="mainRight2D1TPicC">
+										<a href="#" class="mainRight2D1TPicC1">让红包飞</a>
+										<a href="#" class="mainRight2D1TPicC2"><span><em>+</em>关注</span></a>
+								</div>
+							</div>
+							<div class="mainRight2D1B"><p>关注<a href="#">lol东阳</a>的人还关注 </p></div>
+						</div>
+						<div class="mainRight2D2">
+							<a href="#" class="mainRight2D2L">找朋友</a>
+							<a href="#" class="mainRight2D2R">更多>></a>
+						</div>
+			</div>
+		</div>
 	</div>
 	<div id="footer"></div>
 
