--- a/xinlang/index.html
+++ b/xinlang/index.html
@@ -433,14 +433,121 @@
 							</div>
 							<div class="mainRight2D1B"><p>关注<a href="#">lol东阳</a>的人还关注 </p></div>
 						</div>
-						<div class="mainRight2D2">
-							<a href="#" class="mainRight2D2L">找朋友</a>
-							<a href="#" class="mainRight2D2R">更多>></a>
-						</div>
 			</div>
 		</div>
 	</div>
-	<div id="footer"></div>
+
+	<div id="footer">
+		<div id="footerTop">
+			<ul>
+				<li>
+					<span>找找感兴趣的人</span>
+				</li>
+				<li>
+					<a href="#">名人堂</a>
+					<a href="#">微博会员</a>
+				</li>
+				<li>
+					<a href="#">微博达人</a>
+				</li>
+				<li>
+					<a href="#">媒体</a>
+					<a href="#">企业</a>
+					<a href="#">政府</a>
+				</li>
+			</ul>
+			<ul>
+				<l
+					<span>精彩内容</span>
+				</li>
+				<li>
+					<a href="#">微话题</a>
+					<a href="#">风云榜</a>
+				</li>
+				<li>
+					<a href="#">微访谈</a>
+				</li>
+				<li>
+					<a href="#">热门微博</a>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<span>热门应用</span>
+				</li>
+				<li>
+					<a href="#">微吧</a>
+					<a href="#">微公益</a>
+				</li>
+				<li>
+					<a href="#">相册</a>
+					<a href="#">微音乐</a>
+				</li>
+				<li>
+					<a href="#">投票</a>
+					<a href="#">微游戏</a>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<span>手机玩微博</span>
+				</li>
+				<li>
+					<a href="#">WAP版</a>
+					<a href="#">短彩发微博</a>
+				</l
+				<li>
+					<a href="#">iPhone客户端</a>
+					<a href="#">iPad客户端</a>
+				</li>
+				<li>
+					<a href="#">Android客户端</a>
+				</li>
+			</ul>
+			<ul>
+				<li>
+					<span>认证&amp;合作</span>
+				</li>
+				<li>
+					<a href="#">申请认证</a>
+					<a href="#">开放平台</a>
+				</li>
+				<li>
+					<a href="#">企业微博</a>
+							<a href="#">连接网站</a>
+				</li>
+				<li>
+					<a href="#">微博标识</a>
+					<a href="#">广告服务</a>
+				</li>
+			</ul>
+		</div>
+		<div id="footerBottom">
+			<ul class="footerBottomleft">
+				<li class="footerLi1">
+					<a href="#">微博帮助</a>
+					<a href="#">意见反馈</a>
+					<a href="#">开放平台</a>
+					<a href="#">微博招聘</a>
+					<a href="#">新浪网导航</a>
+					<a href="#">社区管理中心</a>
+					<a href="#">微博社区公约</a>
+				</li>
+				<li><span>客服电话：4000 960 960（个人） 4000 980 980（企业） （按当地市话标准计算）</span></li>
+				<li><span>北京微梦创科网络技术有限公司 </span><a href="#"> 京网文[2011]0398-130号</a><a href="#">  京ICP证100780号</a></li>
+			</ul>
+			<div class="footerBottomright">
+				<p>
+					<select class="footerSleect">
+						<option selected>中文(简体)</option>
+						<option>中文(香港)</option>
+						<option>English</option>
+					</select>
+				</p>
+						
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
