--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 			<a href="qqshouye/qq.html"><img src="daohang/qqShouye.png" ></a>
 		</div>
 		<div id="bieShu">
-			<a href="bieshu/index.html"><img src="daohang/1.jpg" width="180px" height="180px"></a>
+			<a href="bieshu/index.html"><img src="daohang/1.png" width="180px" height="180px"></a>
 		</div>
 		<div id="miNiqq">
 			<a href="miniQQ/index.html"><img src="daohang/mini.png"></a>
+		</div>
+		<div id="weibo">
+			<a href="xinlang/index.html"><img src="daohang/3.jpg"></a>
 		</div>
 	</div>
 
